# HAW-AMRob-ente

docker/: docker-compose.yaml  dockerfile
final_ros2_ws/src/articubot_one/: CMakeLists.txt
final_ros2_ws/src/articubot_one/description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
final_ros2_ws/src/articubot_one/launch/: description.launch.py
final_ros2_ws/src/config/: mapper_params_online_async.yaml
final_ros2_ws/src/drive/: package.xml  setup.py
final_ros2_ws/src/drive/drive/: fsm_drive.py
final_ros2_ws/src/drive/launch/: drive.launch.py
final_ros2_ws/src/yolo_pkg/: package.xml  setup.py
final_ros2_ws/src/yolo_pkg/models/: convert_to_ncnn.py
final_ros2_ws/src/yolo_pkg/models/best2_ncnn_model/: metadata.yaml  model_ncnn.py
final_ros2_ws/src/yolo_pkg/yolo_pkg/: ObjectPositionMapper_node.py  yolo_node.py
